--- a/.gitmodules
+++ b/.gitmodules
@@ -238,10 +238,6 @@
 	path = personality-insights
 	url = git@github.ibm.com:Bluemix-Docs/personality-insights.git
 	branch = master
-[submodule "probablisticmatch"]
-	path = probablisticmatch
-	url = git@github.ibm.com:Bluemix-Docs/probablisticmatch.git
-	branch = master
 [submodule "product-insights"]
 	path = product-insights
 	url = git@github.ibm.com:Bluemix-Docs/product-insights.git
@@ -365,4 +361,8 @@
 [submodule "PredictiveMarketScenarios"]
 	path = PredictiveMarketScenarios
 	url = git@github.ibm.com:Bluemix-Docs/PredictiveMarketScenarios.git
+	branch = master
+[submodule "probabilisticmatch"]
+	path = probabilisticmatch
+	url = git@github.ibm.com:Bluemix-Docs/probabilisticmatch.git
 	branch = master
